# rpg

./: .editorconfig  CMakeLists.txt  CMakeSettings.json  README.md  setup.bat  setup.sh
client/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
client/components/: renderable.hpp
client/graphics/: material.cpp  material.hpp  mesh.hpp  render-system.cpp  render-system.hpp  texture.hpp
client/os/: os-event-dispatcher.cpp  os-event-dispatcher.hpp  os-events.hpp  os-window.cpp  os-window.hpp
common/: CMakeLists.txt
common/components/: common-components.hpp  component-types.hpp
common/events/: event-dispatcher.hpp  event-queue.hpp
common/script/: angelscript-addons-source.cpp  script-system.cpp  script-system.hpp
common/util/: component-map.hpp  worker-thread.hpp
server/: CMakeLists.txt
